<!--
    Chris Bowles, Victor Perez, Russell Templet, Nishika Malhotra, Maria Velasquez
    Comp 680, Team 2, Spring 2015, Prof. Boctor
    submit_activity.xml
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/background"
                tools:context=".SubmitActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="#000000"
        android:text="@string/submit_title"
        android:id="@+id/score_activity_scoreTextView1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#000000"
        android:text="@string/submit_description"
        android:id="@+id/score_activity_scoreTextView"
        android:layout_below="@+id/score_activity_scoreTextView1"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_send_button"
        android:id="@+id/submitButton1"
        android:layout_above="@+id/submitButton2"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_leaderboard_button"
        android:id="@+id/submitButton2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>