<!--
    Chris Bowles, Victor Perez, Russell Templet, Nishika Malhotra, Maria Velasquez
    Comp 680, Team 2, Spring 2015, Prof. Boctor
    play_activity.xml
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayActivity">

    <View android:id="@+id/dummy"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:layout_centerInParent="true"/>



    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:id="@+id/map" tools:context=".MapsActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment"/>

    <TextView
        android:id="@+id/maps_activity_timeTextView"
        android:layout_alignEnd="@id/dummy"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="#96000000"
        android:textColor="#ffffff"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/time_text" />

    <TextView
        android:id="@+id/maps_activity_scoreTextView"
        android:layout_alignStart="@id/dummy"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="#96000000"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:text="@string/score_text"
        />


    <TextView
        android:id="@+id/maps_activity_questionTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:background="#96ff0000"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:text="@string/trivia_text" />

    <TextView
        android:id="@+id/maps_activity_difficultyTextView"
        android:layout_width="75dp"
        android:layout_height="20dp"
        android:gravity="center"
        android:text=""
        android:layout_alignBottom="@+id/maps_activity_timeTextView"
        android:layout_centerHorizontal="true" />
        />

    <!-- if you want the next question button, set visibility to visible  -->
    <Button
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_question_button"
        android:id="@+id/maps_activity_next_button"
        android:layout_below="@+id/maps_activity_timeTextView"
        android:layout_centerHorizontal="true" />

</RelativeLayout>